--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -709,8 +709,55 @@ p {
 }
 
 .menu {
+  position: relative;
   margin: 0 1.5vw;
   color: #dedede;
+}
+
+.menu:before {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 4px;
+  top: -7px;
+  left: -5px;
+  opacity: 0;
+  border-radius: 30%;
+  transform: rotate(48deg);
+  transform-origin: top left;
+  background: var(--red);
+  -webkit-transition: width 0.3s;
+  transition: width 0.3s;
+  z-index: 1001;
+}
+
+.menu:after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 4px;
+  top: -4px;
+  right: -1px;
+  opacity: 0;
+  border-radius: 30%;
+  transform: rotate(-48deg);
+  transform-origin: top right;
+  background: var(--red);
+  -webkit-transition: width 0.2s;
+  transition: width 0.2s;
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+  z-index: 1001;
+}
+
+.menu:hover:before {
+  width: 65px;
+  opacity: 1;
+}
+
+.menu:hover:after {
+  width: 70px;
+  opacity: 1;
 }
 
 .navLinks {
@@ -740,6 +787,7 @@ p {
 }
 
 .menuImage {
+  position: relative;
   width: 40px;
 }
 
